added telegram-web-app script and style.css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web app</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1>Web app</h1>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script>
+        tg = window.Telegram.WebApp;
+        tg.expand();
+    </script>
 </body>
 </html>
