--- a/index.html
+++ b/index.html
@@ -4,11 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web app</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap-grid.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Web app</h1>
+    <div class="header">
+        <h1>Каталог</h1>
+        <div class="icons">
+          <a class="btn" href="#"><ion-icon name="search-sharp"></ion-icon></a>
+          <a class="btn" href="#"><ion-icon name="options-sharp"></ion-icon></a>
+        </div>
+    </div>
+    
+    <div class="product-list">
+        <div class="product-card">
+          <img src="./images/sneakers.png" alt="Кроссовки 1">
+          <h2>Модель кроссовок 1</h2>
+          <p class="price">$99.99</p>
+          <button class="buy-btn">Купить</button>
+        </div>
+    
+        <div class="product-card">
+          <img src="./images/sneakers2.png" alt="Кроссовки 2">
+          <h2>Модель кроссовок 2</h2>
+          <p class="price">$129.99</p>
+          <button class="buy-btn">Купить</button>
+        </div>
+    </div>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script>
         tg = window.Telegram.WebApp;
         tg.expand();
