--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="header">
         <h1>Каталог</h1>
         <div class="icons">
-          <a class="btn" href="#"><ion-icon name="search-sharp"></ion-icon></a>
-          <a class="btn" href="#"><ion-icon name="options-sharp"></ion-icon></a>
+          <a class="btn icon-btn" href="#"><ion-icon name="search-sharp"></ion-icon></a>
+          <a class="btn icon-btn" href="#"><ion-icon name="options-sharp"></ion-icon></a>
         </div>
     </div>
     
@@ -21,14 +21,21 @@
           <img src="./images/sneakers.png" alt="Кроссовки 1">
           <h2>Модель кроссовок 1</h2>
           <p class="price">$99.99</p>
-          <button class="buy-btn">Купить</button>
+          <button class="btn">Купить</button>
         </div>
     
         <div class="product-card">
           <img src="./images/sneakers2.png" alt="Кроссовки 2">
           <h2>Модель кроссовок 2</h2>
           <p class="price">$129.99</p>
-          <button class="buy-btn">Купить</button>
+          <button class="btn">Купить</button>
+        </div>
+
+        <div class="product-card">
+          <img src="./images/sneakers3.png" alt="Кроссовки 2">
+          <h2>Модель кроссовок 3</h2>
+          <p class="price">$139.99</p>
+          <button class="btn">Купить</button>
         </div>
     </div>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
