--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
     
     <div class="product-list">
         <div class="product-card">
-          <img src="./images/sneakers.png" alt="Кроссовки 1">
-          <h2>Модель кроссовок 1</h2>
+          <img src="./images/1.png" alt="Кроссовки">
+          <h2>Модель кроссовок</h2>
           <p class="price">$99.99</p>
           <button class="btn">Купить</button>
         </div>
     
         <div class="product-card">
-          <img src="./images/sneakers2.png" alt="Кроссовки 2">
-          <h2>Модель кроссовок 2</h2>
-          <p class="price">$129.99</p>
+          <img src="./images/1.png" alt="Кроссовки">
+          <h2>Модель кроссовок</h2>
+          <p class="price">$99.99</p>
           <button class="btn">Купить</button>
         </div>
 
         <div class="product-card">
-          <img src="./images/sneakers3.png" alt="Кроссовки 2">
-          <h2>Модель кроссовок 3</h2>
-          <p class="price">$139.99</p>
+          <img src="./images/1.png" alt="Кроссовки">
+          <h2>Модель кроссовок</h2>
+          <p class="price">$99.99</p>
           <button class="btn">Купить</button>
         </div>
     </div>
