--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
     <div class="header">
+      <div style="width: 50px; height: 50px; background: var(--bg_color);"></div>
+      <div style="width: 50px; height: 50px; background: var(--text_color);"></div>
+      <div style="width: 50px; height: 50px; background: var(--hint_color);"></div>
+      <div style="width: 50px; height: 50px; background: var(--link_color);"></div>
+      <div style="width: 50px; height: 50px; background: var(--button_color);"></div>
+      <div style="width: 50px; height: 50px; background: var(--button_text_color);"></div>
+      <div style="width: 50px; height: 50px; background: var(--secondary_bg_color);"></div>
         <h1>Каталог</h1>
         <div class="icons">
           <a class="btn icon-btn" href="#"><ion-icon name="search-sharp"></ion-icon></a>
