--- a/index.html
+++ b/index.html
@@ -1,55 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web app</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap-grid.min.css" rel="stylesheet">
-</head>
-<body>
-    <div class="header">
-      <div style="width: 50px; height: 50px; background: var(--bg_color);"></div>
-      <div style="width: 50px; height: 50px; background: var(--text_color);"></div>
-      <div style="width: 50px; height: 50px; background: var(--hint_color);"></div>
-      <div style="width: 50px; height: 50px; background: var(--link_color);"></div>
-      <div style="width: 50px; height: 50px; background: var(--button_color);"></div>
-      <div style="width: 50px; height: 50px; background: var(--button_text_color);"></div>
-      <div style="width: 50px; height: 50px; background: var(--secondary_bg_color);"></div>
-        <h1>Каталог</h1>
-        <div class="icons">
-          <a class="btn icon-btn" href="#"><ion-icon name="search-sharp"></ion-icon></a>
-          <a class="btn icon-btn" href="#"><ion-icon name="options-sharp"></ion-icon></a>
-        </div>
-    </div>
-    
-    <div class="product-list">
-        <div class="product-card">
-          <img src="./images/1.png" alt="Кроссовки">
-          <h2>Модель кроссовок</h2>
-          <p class="price">$99.99</p>
-          <button class="btn">Купить</button>
-        </div>
-    
-        <div class="product-card">
-          <img src="./images/1.png" alt="Кроссовки">
-          <h2>Модель кроссовок</h2>
-          <p class="price">$99.99</p>
-          <button class="btn">Купить</button>
-        </div>
 
-        <div class="product-card">
-          <img src="./images/1.png" alt="Кроссовки">
-          <h2>Модель кроссовок</h2>
-          <p class="price">$99.99</p>
-          <button class="btn">Купить</button>
-        </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Web app</title>
+  <link rel="stylesheet" href="./css/style.css">
+</head>
+
+<body>
+  <div class="header">
+    <p class="display-1">Каталог</p>
+    <div class="icons">
+      <a class="icon-btn" href="#"><ion-icon name="search-sharp"></ion-icon></a>
+      <a class="icon-btn" href="#"><ion-icon name="options-sharp"></ion-icon></a>
     </div>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script>
-        tg = window.Telegram.WebApp;
-        tg.expand();
-    </script>
+  </div>
+
+  <div class="product-list">
+    <div class="product-card">
+      <img src="./images/1.png" alt="Кроссовки">
+      <p class="price">10 626 &#8381;</p>
+      <p class="title">Nike Dunk high retro</p>
+      <div class="center">
+        <a class="btn">Купить</a>
+      </div>
+    </div>
+    <div class="product-card">
+      <img src="./images/1.png" alt="Кроссовки">
+      <p class="price">10 626 &#8381;</p>
+      <p class="title">Nike Dunk high retro</p>
+      <div class="center">
+        <a class="btn">Купить</a>
+      </div>
+    </div>
+    <div class="product-card">
+      <img src="./images/1.png" alt="Кроссовки">
+      <p class="price">10 626 &#8381;</p>
+      <p class="title">Nike Dunk high retro</p>
+      <div class="center">
+        <a class="btn">Купить</a>
+      </div>
+    </div>
+    <div class="product-card">
+      <img src="./images/1.png" alt="Кроссовки">
+      <p class="price">10 626 &#8381;</p>
+      <p class="title">Nike Dunk high retro</p>
+      <div class="center">
+        <a class="btn">Купить</a>
+      </div>
+    </div>
+  </div>
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script>
+    tg = window.Telegram.WebApp;
+    tg.expand();
+  </script>
 </body>
+
 </html>
