--- a/index.html
+++ b/index.html
@@ -19,33 +19,41 @@
 
   <div class="product-list">
     <div class="product-card">
-      <img src="./images/1.png" alt="Кроссовки">
-      <p class="price">10 626 &#8381;</p>
-      <p class="title">Nike Dunk high retro</p>
+      <div class="info">
+        <img src="./images/1.png" alt="Кроссовки">
+        <p class="price">10 626 &#8381;</p>
+        <p class="title">Nike Dunk high retro</p>
+      </div>
       <div class="center">
         <a class="btn">Купить</a>
       </div>
     </div>
     <div class="product-card">
-      <img src="./images/1.png" alt="Кроссовки">
-      <p class="price">10 626 &#8381;</p>
-      <p class="title">Nike Dunk high retro</p>
+      <div class="info">
+        <img src="./images/1.png" alt="Кроссовки">
+        <p class="price">10 626 &#8381;</p>
+        <p class="title">Nike Dunk high retro</p>
+      </div>
       <div class="center">
         <a class="btn">Купить</a>
       </div>
     </div>
     <div class="product-card">
-      <img src="./images/1.png" alt="Кроссовки">
-      <p class="price">10 626 &#8381;</p>
-      <p class="title">Nike Dunk high retro</p>
+      <div class="info">
+        <img src="./images/1.png" alt="Кроссовки">
+        <p class="price">10 626 &#8381;</p>
+        <p class="title">Nike Dunk high retro</p>
+      </div>
       <div class="center">
         <a class="btn">Купить</a>
       </div>
     </div>
     <div class="product-card">
-      <img src="./images/1.png" alt="Кроссовки">
-      <p class="price">10 626 &#8381;</p>
-      <p class="title">Nike Dunk high retro</p>
+      <div class="info">
+        <img src="./images/1.png" alt="Кроссовки">
+        <p class="price">10 626 &#8381;</p>
+        <p class="title">Nike Dunk high retro</p>
+      </div>
       <div class="center">
         <a class="btn">Купить</a>
       </div>
