--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div class="header">
     <p class="display-1">Каталог</p>
     <div class="icons">
-      <a class="icon-btn" href="#"><ion-icon name="search-sharp"></ion-icon></a>
-      <a class="icon-btn" href="#"><ion-icon name="options-sharp"></ion-icon></a>
+      <a class="icon-btn" href="#"><ion-icon name="search-outline"></ion-icon></a>
+      <a class="icon-btn" href="#"><ion-icon name="options-outline"></ion-icon></a>
     </div>
   </div>
 
